--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,13 +8,13 @@
   "theme_color": "#0066CC",
   "icons": [
     {
-      "src": "http://aislike.rs/LOKI/android-chrome-512x512.png",
+      "src": "/images/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "http://aislike.rs/LOKI/favicon-32x32.png",
+      "src": "/images/favicon-32x32.png",
       "sizes": "32x32",
       "type": "image/png"
     }
